--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,20 @@
+# Build dir
+build
+
 # Compiled Object files
-*.slo
-*.lo
 *.o
-*.obj
 
 # Precompiled Headers
 *.gch
 *.pch
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
 # Executables
 *.exe
 *.out
 *.app
+
+# IDE settings
+.vscode
+.idea
+
+# todo: doplnit ostatne IDE subory
