Pridana instalacna sekcia v doc, dokonceny test makefile ciel, upraveny .editorconfig

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,10 +6,11 @@ DOCS_LOCATION=..
 TESTS_DIRECTORY_NAME=tests
 TESTS_LOCATION=..
 
-# DEPENDENCIES=(sphinx recommonmark nose)
+.PHONY: all pack clean test doc run install profile
 
 # all (přeloží projekt - včetně programu pro profiling)
-all: doc profile
+all: install doc profile
+	pip install -r requirements.txt
 
 pack:
 	# todo: zabalí projekt tak, aby mohl být odevzdán
@@ -18,16 +19,18 @@ clean:
 	# todo: smaže všechny soubory, co nemají být odevzdány
 
 test:
-	# spustí testy matematické knihovny
-	cd $(DOCS_LOCATION)/$(DOCS_DIRECTORY_NAME)/math_tests && nosetests
+	python -m unittest discover -s $(TESTS_LOCATION)/$(TESTS_DIRECTORY_NAME)/math_tests -v -p '*_test.py'
 
 doc:
-	# vygeneruje dokumentaciu
-	cd $(TESTS_LOCATION)/$(TESTS_DIRECTORY_NAME) && make html
+	cd $(DOCS_LOCATION)/$(DOCS_DIRECTORY_NAME) && make html
 
-run:
+run: install
 	# spusti aplikaciu
+	pip install -r requirements.txt
 	./$(PYTHON_MAIN_FILE)
+
+install:
+	pip install -r requirements.txt
 
 profile:
 	# todo: spustí překlad programu pro výpočet směrodatné odchylky na profiling
