--- a/requirements.txt
+++ b/requirements.txt
@@ -16,13 +16,16 @@ lazy-object-proxy==1.3.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
 packaging==19.0
+pep8==1.7.1
 pycodestyle==2.5.0
 Pygments==2.3.1
 pylint==2.3.1
 pyparsing==2.3.1
+PySide2==5.12.2
 pytz==2018.9
 recommonmark==0.5.0
 requests==2.21.0
+shiboken2==5.12.2
 six==1.12.0
 snowballstemmer==1.2.1
 Sphinx==1.8.5
