--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ autopep8==1.4.3
 Babel==2.6.0
 certifi==2019.3.9
 chardet==3.0.4
+Click==7.0
 colorama==0.4.1
 commonmark==0.8.1
 docutils==0.14
@@ -29,6 +30,7 @@ shiboken2==5.12.2
 six==1.12.0
 snowballstemmer==1.2.1
 Sphinx==1.8.5
+sphinx-intl==0.9.11
 sphinx-rtd-theme==0.4.3
 sphinxcontrib-websupport==1.1.0
 typed-ast==1.3.1
