--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Build dir
 build
 doc/source/modules
+dist
+deploy/42calc-*
 
 # Compiled Object files
 *.o
@@ -21,7 +23,16 @@ doc/source/modules
 # Python stuff
 venv
 __pycache__
+
+# Compiled python modules.
 *.pyc
+
+# Setuptools distribution folder.
+/dist/
+
+# Python egg metadata, regenerated from source files by setuptools.
+/*.egg-info
+/*.egg
 
 # Docker files
 .env
