--- a/src/installer.cfg
+++ b/src/installer.cfg
@@ -22,6 +22,6 @@ pypi_wheels = PySide2==5.12.2
 # from a directory, see the docs on the config file.
 
 # Other files and folders that should be installed
-files = LICENSE
-    README.md
+files = ../LICENSE
+    ../README.md
     resources/
