--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ deploy/42calc-*
 *.exe
 *.out
 *.app
+*.zip
 
 # IDE settings
 .vscode
@@ -31,8 +32,8 @@ __pycache__
 /dist/
 
 # Python egg metadata, regenerated from source files by setuptools.
-/*.egg-info
-/*.egg
+*.egg-info
+*.egg
 
 # Docker files
 .env
